feat: 인기 게시글 조회 API 내부 로직 수정